--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.10/angular.min.js"></script>
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.3/angular-sanitize.min.js"></script>
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/showdown/0.3.1/showdown.min.js"></script>
+	<script src="components/showdown.mathjax.js"></script>
 	<script src="bower_components/angular-markdown-directive/markdown.js"></script>
 	<script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.12.0/ui-bootstrap-tpls.min.js"></script>
@@ -29,11 +30,14 @@
 	</script>
 
     <script src="controllers/main.js"></script>
-    <script src="directives/mathjax.js"></script>
+    <script src="services/mathjax.js"></script>
+    <script src="directives/texlist.js"></script>
+    <script src="directives/loader.js"></script>
+    <script src="directives/stateAsHtml.js"></script>
 
 	<script type="text/javascript">
 		MathJax.Hub.Config({
-		    skipStartupTypeset: false,
+		    skipStartupTypeset: true,
 		    messageStyle: "none",
 		    "HTML-CSS": {
 		        showMathMenu: false
@@ -97,9 +101,9 @@
 				  </span>
 				</button>
 			</div><br/>
-			<textarea class="texinput" ng-class="color" btf-markdown="markdown" ng-model="expression"></textarea>
+			<textarea class="texinput" ng-class="color" btf-markdown="markdown" ng-model="state" texlist="&#10;" ng-trim="false"></textarea>
 		</div>
-		<div id="page" class="page" mathjax="expression" ng-hide="typesetting"></div>
+		<div id="page" class="page" state-as-html="state"></div>
       </div>
     </div>
 </body>
