--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width">
+
     <title>TeX POC</title>
 
+    <!-- Stylesheets -->
     <link rel="stylesheet" type="text/css" href="bower_components/angular-ui-layout/ui-layout.css"/>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
 	<link rel="stylesheet" href="css/style.css">
 
+	<!-- Dependencies -->
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.10/angular.min.js"></script>
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.3/angular-sanitize.min.js"></script>
@@ -24,31 +27,15 @@
 	<script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML-full&delayStartupUntil=configured"></script>
 	<script src="bower_components/raf/index.js"></script>
 	<script src="bower_components/angular-ui-layout/ui-layout.js"></script>
+	<script src="components/jaxconfig.js"></script>
 
-	<script type="text/javascript">
-		var texapp = angular.module('texapp', ['btford.markdown', 'ui.bootstrap', 'ui.layout']);
-	</script>
-
+	<!-- Angular stuff -->
     <script src="controllers/main.js"></script>
     <script src="services/mathjax.js"></script>
     <script src="directives/texList.js"></script>
     <script src="directives/texLoader.js"></script>
     <script src="directives/texStateAsHtml.js"></script>
 
-	<script type="text/javascript">
-		MathJax.Hub.Config({
-		    skipStartupTypeset: true,
-		    messageStyle: "none",
-		    "HTML-CSS": {
-		        showMathMenu: false
-		    },
-		    tex2jax: {
-			    inlineMath: [['$','$'], ['\\(','\\)']],
-			    processEscapes: true
-			}
-		});
-		MathJax.Hub.Configured();
-	</script>
 </head>
 
 <body ng-controller="mainController" ng-class="color">
@@ -56,51 +43,6 @@
 	<div ui-layout>
       <div ui-layout="{flow : 'column'}" on-resize="onPageResize()" >
         <div class="toolbox">
-        	<!-- hide this for now -->
-			<div class="btn-group" role="group" style="display:none">
-				<div class="btn-group" role="group">
-					<button type="button" ng-click="toggleColors()" class="btn btn-default btn-toolbox" title="Invert colors" aria-label="Left Align">
-					  <span aria-hidden="true">
-					  		<script type="math/tex">color^{-1}</script>
-					  </span>
-					</button>
-					<button type="button" ng-click="savePdf()" class="btn btn-default btn-toolbox" title="Save as PDF" aria-label="Left Align">
-					  <span aria-hidden="true">PDF</span>
-					</button>
-					<button type="button" title="Fractions" id="ddmFractions"
-						class="btn btn-default btn-toolbox dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
-						<span aria-hidden="true">
-					  		<script type="math/tex">\frac{x}{y}</script>
-					  	</span>
-					</button>
-					<ul class="dropdown-menu" role="menu" aria-labelledby="ddmFractions">
-					    <li>
-					    	<div class="btn-group">
-					    		<button type="button" ng-click="insertMath('\\frac{}{}')" class="btn btn-default btn-toolbox" title="Fraction" aria-label="Left Align">
-									<span aria-hidden="true">
-								  		<script type="math/tex">\frac{x}{y}</script>
-									</span>
-								</button>
-								<button type="button" ng-click="insertMath('{}/{}')" class="btn btn-default btn-toolbox" title="Linear fraction" aria-label="Left Align">
-									<span aria-hidden="true">
-								  		<script type="math/tex">{x}/{y}</script>
-									</span>
-								</button>
-					    	</div>
-					    </li>
-					</ul>
-				</div>
-				<button type="button" class="btn btn-default btn-toolbox" title="Radical signs" aria-label="Left Align">
-				  <span aria-hidden="true">
-				  		<script type="math/tex">\sqrt{}</script>
-				  </span>
-				</button>
-				<button type="button" class="btn btn-default btn-toolbox" title="Suffix" aria-label="Left Align">
-				  <span aria-hidden="true">
-				  		<script type="math/tex">e^x</script>
-				  </span>
-				</button>
-			</div><br/>
 			<textarea class="texinput" ng-class="color" btf-markdown="markdown" ng-model="state" tex-list="&#10;" ng-trim="false"></textarea>
 		</div>
 		<div id="page" class="page" tex-state-as-html="state"></div>
