--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<script src="bower_components/angular-markdown-directive/markdown.js"></script>
 	<script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.12.0/ui-bootstrap-tpls.min.js"></script>
-	<script src="components/MathJax.js?config=TeX-AMS_HTML-full&delayStartupUntil=configured"></script>
+	<script src="bower_components/MathJax/MathJax.js?config=TeX-AMS_HTML-full&delayStartupUntil=configured"></script>
 	<script src="bower_components/raf/index.js"></script>
 	<script src="bower_components/angular-ui-layout/ui-layout.js"></script>
 	<script src="components/jaxconfig.js"></script>
@@ -47,7 +47,6 @@
       <div ui-layout="{flow : 'column'}" on-resize="onPageResize()" >
         <div class="toolbox">
         	<div ui-ace="aceOptions" ng-model="document"></div>
-			<!--<<textarea class="texinput" ng-class="color" btf-markdown="markdown" ng-model="state" tex-list="&#10;" ng-trim="false"></textarea>-->
 		</div>
 		<div id="page" class="page" tex-markdown="document"></div>
 
