--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
 
     <title>TeX POC</title>
 
+    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300' rel='stylesheet' type='text/css'>
+
     <!-- Stylesheets -->
     <link rel="stylesheet" href="components/angular-ui-layout/ui-layout.css"/>
 	<link rel="stylesheet" href="components/bootstrap/css/bootstrap.css">
@@ -20,6 +22,7 @@
 	<script src="components/jquery.js"></script>
 	<script src="components/angular.js"></script>
 	<script src="components/angular-sanitize.js"></script>
+	<script src="components/angular-route.js"></script>
 	<script src="components/ui-ace.js"></script>
 	<script src="components/showdown.js"></script>
 	<script src="components/showdown.mathjax.js"></script>
@@ -44,11 +47,10 @@
 <body ng-controller="mainController" ng-class="color">
 
 	<div ui-layout>
-      <div ui-layout="{flow : 'column'}" on-resize="onPageResize()" >
-        <div class="toolbox">
-        	<div ui-ace="aceOptions" ng-model="document"></div>
-		</div>
-		<div id="page" class="page" tex-markdown="document"></div>
+      <div ui-layout="{flow : 'column'}" on-resize="onPageResize()">
+       	
+       	<div ui-layout-container><div ui-ace="aceOptions" ng-model="document"></div></div>
+		<div ui-layout-container><div class="document" tex-markdown="document"></div></div>
 
       </div>
     </div>
