simpel mathjax tilføjelse, lavet stort set som på stackedit.io

--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
 			<div ui-layout="{flow : 'column'}" on-resize="onPageResize()">
 				
 				<div ui-layout-container><div ui-ace="aceOptions" ng-model="document"></div></div>
-				<div ui-layout-container><div class="document" tex-markdown="document"></div></div>
+				<div ui-layout-container class="document"><div tex-markdown="document"></div></div>
 
 			</div>
 		</div>
