--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
 	<link rel="stylesheet" href="css/style.min.css">
 	<script src="components/MathJax/MathJax.js?config=TeX-AMS_HTML-full&delayStartupUntil=configured"></script>
-    <script src="main.js"></script>
+    <script src="main.min.js"></script>
 
 </head>
 
