--- a/src/index.html
+++ b/src/index.html
@@ -17,11 +17,14 @@
 
 <body ng-controller="mainController" ng-class="color">
 	<div ui-layout="{dividerSize: 0}">
-		<div ui-layout-container size="25px" class="topbar"><span class="label" ng-class="state | rstolabel">{{ state | rstotext }}</span></div>
+		<div ui-layout-container size="25px" class="topbar">
+			<span class="label" ng-class="state | rstolabel">{{ state | rstotext }}</span>
+			<span>{{ pendingdata }}</span>
+		</div>
 		<div ui-layout-container> 
 			<div ui-layout="{flow : 'column'}" on-resize="onPageResize()">
 				
-				<div ui-layout-container><div ui-ace="aceOptions" ng-model="document"></div></div>
+				<div ui-layout-container><div ui-ace="aceOptions" ng-model="document" ng-readonly="!docloaded"></div></div>
 				<div ui-layout-container class="document"><div tex-markdown="document"></div></div>
 
 			</div>
