--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
 			<div ui-layout="{flow : 'column'}" on-resize="onPageResize()">
 				
 				<div ui-layout-container><div ui-ace="aceOptions" ng-model="document" ng-readonly="!docloaded"></div></div>
-				<div ui-layout-container class="document"><div ng-hide="processing"><div tex-markdown="document"></div></div></div>
+				<div ui-layout-container><div tex-markdown="document"></div></div>
 
 			</div>
 		</div>
