--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 
     <title>TeX POC</title>
 
+	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900,200italic,300italic,400italic,600italic,700italic,900italic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/style.min.css">
 	<script src="components/MathJax/MathJax.js?config=TeX-AMS_HTML-full&delayStartupUntil=configured"></script>
     <script src="main.min.js"></script>
