a bit better scroll sync

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
 					<div ui-ace="aceOptions" ng-model="document" ng-readonly="!docloaded"></div>
 				</div>
 				<div ui-layout-container class="document-container">
-					<div tex-markdown="document"></div>
+					<div tex-markdown="document" ace="aceEditor"></div>
 				</div>
 
 			</div>
