--- a/src/index.html
+++ b/src/index.html
@@ -4,15 +4,15 @@
 
 <head>
 	<meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width">
 
-    <title>MarkTex</title>
+	<title>MarkTex</title>
 
 	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900,200italic,300italic,400italic,600italic,700italic,900italic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/style.min.css">
 	<script src="components/MathJax/MathJax.js?config=TeX-AMS_HTML-full&delayStartupUntil=configured"></script>
-    <script src="main.min.js"></script>
+	<script src="main.min.js"></script>
 
 </head>
 
@@ -25,10 +25,12 @@
 						<a class="navbar-brand" href="#">
 							MarkTex
 						</a>
-						<ul class="nav navbar-nav navbar-right">
-        					<li style="padding-top: 0.3em;"><span class="label" ng-class="state | rstolabel">{{ state | rstotext }}</span></li>
-        				</ul>
-						<span>{{ pendingdata }}</span>
+					</div>
+					<div class="collapse navbar-collapse navbar-right">
+						<p class="navbar-text">
+							<span ng-class="state | rstolabel">{{ state | rstotext }}</span>
+							<span>{{ pendingdata }}</span>
+						</p>
 					</div>
 				</div>
 			</nav>
@@ -45,7 +47,7 @@
 
 			</div>
 		</div>
-    </div>
+	</div>
 </body>
 
 </html>
