angular router påbegyndt, grunt script udvidet

--- a/src/index.html
+++ b/src/index.html
@@ -2,52 +2,22 @@
 
 <html ng-app="texapp">
 
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width">
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width">
 
-	<title>MarkTex</title>
+		<title>MarkTex</title>
 
-	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900,200italic,300italic,400italic,600italic,700italic,900italic' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="css/style.min.css">
-	<script src="components/MathJax/MathJax.js?config=TeX-AMS_HTML-full&delayStartupUntil=configured"></script>
-	<script src="main.min.js"></script>
+		<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900,200italic,300italic,400italic,600italic,700italic,900italic' rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" href="css/style.min.css">
+		<script src="components/MathJax/MathJax.js?config=TeX-AMS_HTML-full&delayStartupUntil=configured"></script>
+		<script src="main.min.js"></script>
 
-</head>
+	</head>
 
-<body ng-controller="mainController" ng-class="color">
-	<div ui-layout="{ dividerSize: 0 }">
-		<div ui-layout-container size="50px" class="topbar">
-			<nav class="navbar navbar-default">
-				<div class="container-fluid">
-					<div class="navbar-header">
-						<a class="navbar-brand" href="#">
-							MarkTex
-						</a>
-					</div>
-					<div class="collapse navbar-collapse navbar-right">
-						<p class="navbar-text">
-							<span ng-class="state | rstolabel">{{ state | rstotext }}</span>
-							<span>{{ pendingdata }}</span>
-						</p>
-					</div>
-				</div>
-			</nav>
-		</div>
-		<div ui-layout-container> 
-			<div ui-layout="{flow : 'column', onresize: onPageResize }">
-				
-				<div ui-layout-container class="editor-container">
-					<div ui-ace="aceOptions" ng-model="document" ng-readonly="!docloaded"></div>
-				</div>
-				<div ui-layout-container class="document-container">
-					<div tex-markdown="document" ace="aceEditor" class="tex-document"></div>
-				</div>
-
-			</div>
-		</div>
-	</div>
-</body>
+	<body>
+		<div ng-view></div>
+	</body>
 
 </html>
