major cleanup. menu directive. animations on view transitions

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html ng-app="texapp">
+<html ng-app="texapp" ng-cloak>
 
 	<head>
 		<base href="/" />
@@ -18,6 +18,7 @@
 	</head>
 
 	<body>
-		<div ng-view></div>
+		<div tex-menu></div>
+		<div ng-view class="viewport"></div>
 	</body>
 </html>
